hello post sectio is almost complete

--- a/sass/components/mind.scss
+++ b/sass/components/mind.scss
@@ -1,12 +1,13 @@
 .main-con--mind-section {
     width: 67%;
     height: 21%;
+    height: 12rem;
     background-color: #242526;
     position: relative;
     margin-left: 4rem;
     border-radius: 8px;
     -webkit-border-radius: 8px;
-    margin-left: 12rem;
+    margin-left: 13rem;
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
