--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -191,7 +191,7 @@
                             -moz-border-radius: 50%;
                             -ms-border-radius: 50%;
                             -o-border-radius: 50%;
-                            position: relative;
+                            position: absolute;
                             content: "";
                             height: 100%;
                             width: 100%;
