--- a/css/style.css
+++ b/css/style.css
@@ -2143,7 +2143,7 @@ body {
               -moz-border-radius: 50%;
               -ms-border-radius: 50%;
               -o-border-radius: 50%;
-              position: relative;
+              position: absolute;
               content: "";
               height: 100%;
               width: 100%;
@@ -2172,12 +2172,13 @@ body {
 .main-con--mind-section {
   width: 67%;
   height: 21%;
+  height: 12rem;
   background-color: #242526;
   position: relative;
   margin-left: 4rem;
   border-radius: 8px;
   -webkit-border-radius: 8px;
-  margin-left: 12rem;
+  margin-left: 13rem;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
@@ -2279,7 +2280,7 @@ body {
   margin-left: 4rem;
   border-radius: 8px;
   -webkit-border-radius: 8px;
-  margin-left: 12rem;
+  margin-left: 13rem;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
@@ -2337,5 +2338,101 @@ body {
 
 .post-con {
   width: 100%;
-  height: 100%;
-  border: 2px solid green; }
+  height: auto;
+  display: flex;
+  flex-direction: column; }
+  .post-con--box {
+    overflow: hidden;
+    width: 67%;
+    height: 63.5rem;
+    background-color: #242526;
+    margin-left: 6rem;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: 100%;
+    margin-left: 13rem;
+    grid-template-rows: 10% 78% 12%; }
+    .post-con--box--header {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-template-rows: 100%;
+      grid-template-columns: 100%; }
+      .post-con--box--header--img-con {
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        align-content: center; }
+        .post-con--box--header--img-con--img {
+          margin-left: 1.5rem;
+          border: 2px solid #2e89ff;
+          width: 4rem;
+          height: 4rem;
+          border-radius: 50%;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          -ms-border-radius: 50%;
+          -o-border-radius: 50%; }
+          .post-con--box--header--img-con--img--name-con {
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            align-content: center; }
+            .post-con--box--header--img-con--img--name-con--name {
+              color: #E4E6EB;
+              font-size: 1.4rem;
+              font-family: 'Roboto', sans-serif;
+              font-weight: 600;
+              margin-left: 1rem;
+              margin-top: -2rem; }
+            .post-con--box--header--img-con--img--name-con--time {
+              text-decoration: none;
+              color: #B0B3B8;
+              font-size: 1.2rem;
+              font-family: 'Roboto', sans-serif;
+              font-weight: 400;
+              margin-top: 1.5rem;
+              margin-left: -4.7rem;
+              transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+              -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+              -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+              -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+              -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+              .post-con--box--header--img-con--img--name-con--time:hover {
+                transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                text-decoration: underline; }
+  .post-con--main {
+    width: 100%;
+    height: 100%; }
+    .post-con--main--img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+  .post-con--reaction {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(2, 50%); }
+    .post-con--reaction--reacted-con {
+      width: 100%;
+      height: 100%;
+      display: flex; }
+      .post-con--reaction--reacted-con--reacted--icon {
+        margin-left: 1.8rem;
+        margin-top: 1rem; }
+        .post-con--reaction--reacted-con--reacted--icon--count {
+          color: #B0B3B8;
+          font-size: 1.3rem;
+          font-family: 'Roboto', sans-serif;
+          margin-left: 0.5rem;
+          margin-top: 1rem; }
