--- a/sass/components/postsection.scss
+++ b/sass/components/postsection.scss
@@ -1,6 +1,115 @@
 .post-con {
     width: 100%;
-    height: 100%;
-    border: 2px solid green;
-    overflow: scroll;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    &--box {
+        overflow: hidden;
+        width: 67%;
+        height: 63.5rem;
+        background-color: #242526;
+        margin-left: 6rem;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        margin-top: 2rem;
+        display: grid;
+        grid-template-columns: 100%;
+        margin-left: 13rem;
+        grid-template-rows: 10% 78% 12%;
+        &--header {
+            width: 100%;
+            height: 100%;
+            display: grid;
+            grid-template-rows: 100%;
+            grid-template-columns: 100%;
+            &--img-con {
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                align-content: center;
+                &--img {
+                    margin-left: 1.5rem;
+                    border: 2px solid #2e89ff;
+                    width: 4rem;
+                    height: 4rem;
+                    border-radius: 50%;
+                    -webkit-border-radius: 50%;
+                    -moz-border-radius: 50%;
+                    -ms-border-radius: 50%;
+                    -o-border-radius: 50%;
+                    &--name-con {
+                        display: flex;
+                        align-items: center;
+                        justify-items: center;
+                        align-content: center;
+                        &--name {
+                            color: #E4E6EB;
+                            font-size: 1.4rem;
+                            font-family: 'Roboto', sans-serif;
+                            font-weight: 600;
+                            margin-left: 1rem;
+                            margin-top: -2rem;
+                        }
+                        &--time {
+                            text-decoration: none;
+                            color: #B0B3B8;
+                            font-size: 1.2rem;
+                            font-family: 'Roboto', sans-serif;
+                            font-weight: 400;
+                            margin-top: 1.5rem;
+                            margin-left: -4.7rem;
+                            transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                            &:hover {
+                                transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                                -webkit-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                                -moz-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                                -ms-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                                -o-transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+                                text-decoration: underline;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    &--main {
+        width: 100%;
+        height: 100%;
+        &--img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    &--reaction {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(2, 50%);
+        &--reacted-con {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            &--reacted--icon {
+                margin-left: 1.8rem;
+                margin-top: 1rem;
+                &--count {
+                    color: #B0B3B8;
+                    font-size: 1.3rem;
+                    font-family: 'Roboto', sans-serif;
+                    margin-left: 0.5rem;
+                    margin-top: 1rem;
+                }
+            }
+        }
+    }
 }
