--- a/sass/extra/extra.scss
+++ b/sass/extra/extra.scss
@@ -106,3 +106,14 @@
         background-color: #f4d419;
     }
 }
+
+.like__btn {
+    background: transparent;
+    font-size: 18px;
+    font-family: "Open Sans", sans-serif;
+    border-radius: 5px;
+    color: #0080ff !important;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
