--- a/sass/components/postsection.scss
+++ b/sass/components/postsection.scss
@@ -110,6 +110,78 @@
                     margin-top: 1rem;
                 }
             }
+            &--share {
+                color: #B0B3B8;
+                font-size: 1.2rem;
+                font-family: 'Roboto', sans-serif;
+                margin-left: 28rem;
+                margin-top: 1rem;
+            }
+        }
+    }
+    &--divider {
+        background-color: rgba(128, 128, 128, 0.4);
+        height: 0.1rem;
+        width: 295%;
+        z-index: 1000;
+        margin-top: -4.2rem;
+        margin-left: 0.7rem;
+        position: relative;
+    }
+    &--reaction-con {
+        width: 93%;
+        height: 100%;
+        margin-left: 1.5rem;
+        display: grid;
+        grid-template-rows: 100%;
+        grid-template-columns: repeat(3, 33.3%);
+        &--box {
+            text-align: center;
+            height: 93%;
+            border-radius: 0.8rem;
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            align-content: center;
+            justify-content: center;
+            transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-border-radius: 0.8rem;
+            -moz-border-radius: 0.8rem;
+            -ms-border-radius: 0.8rem;
+            -o-border-radius: 0.8rem;
+            transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+            &:hover {
+                transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+                -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+                background-color: rgba(77, 79, 80, 0.7);
+            }
+            &--icon {
+                -webkit-filter: invert(62%) sepia(98%) saturate(12%) hue-rotate(175deg) brightness(90%) contrast(96%);
+                width: 1.8rem;
+                height: 1.8rem;
+                fill: transparent;
+                stroke-width: 3px;
+                stroke: #B0B3B8;
+                &--name {
+                    font-size: 1.4rem;
+                    color: #B0B3B8;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: bold;
+                    margin-left: 0.5rem;
+                    margin-top: 0.4rem;
+                }
+            }
         }
     }
 }
