--- a/sass/components/mind.scss
+++ b/sass/components/mind.scss
@@ -12,6 +12,23 @@
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
     margin-top: -2rem;
+    @media only screen and (max-width: 1200px) {
+        & {
+            width: 75%;
+            height: 21%;
+            height: 12rem;
+            background-color: #242526;
+            position: relative;
+            margin-left: 4rem;
+            border-radius: 8px;
+            -webkit-border-radius: 8px;
+            margin-left: 9rem;
+            -moz-border-radius: 8px;
+            -ms-border-radius: 8px;
+            -o-border-radius: 8px;
+            margin-top: -2rem;
+        }
+    }
     &--grid {
         width: 100%;
         height: 100%;
@@ -51,6 +68,18 @@
                     color: #E4E6EB;
                     font-size: 1.7rem;
                     margin-top: 1rem;
+                    @media only screen and (max-width: 1230px) {
+                        & {
+                            margin-left: 0%;
+                            width: 36rem;
+                        }
+                    }
+                    @media only screen and (max-width:1200px) {
+                        & {
+                            margin-left: -1.2rem;
+                            width: 40rem;
+                        }
+                    }
                     &::placeholder {
                         font-size: 1.7rem;
                         color: #B0B3B8;
