--- a/sass/components/postsection.scss
+++ b/sass/components/postsection.scss
@@ -116,6 +116,17 @@
                 font-family: 'Roboto', sans-serif;
                 margin-left: 28rem;
                 margin-top: 1rem;
+                @media only screen and (max-width: 1350px) {
+                    & {
+                        margin-left: 23rem;
+                        margin-top: 1.1rem;
+                    }
+                }
+                @media only screen and (max-width:1220px) {
+                    & {
+                        margin-left: 20rem;
+                    }
+                }
             }
         }
     }
