--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -1,6 +1,11 @@
 .main-con--story-con {
     width: 100%;
     height: 45%;
+    @media only screen and (max-width: 1280px) {
+        & {
+            width: 105%;
+        }
+    }
     &--grid {
         width: 81.4%;
         height: 80%;
@@ -10,6 +15,18 @@
         grid-template-rows: 100%;
         grid-template-columns: repeat(5, 18%);
         grid-gap: 1rem;
+        @media only screen and (max-width: 1230px) {
+            & {
+                width: 85.4%;
+                margin-left: 5rem;
+            }
+        }
+        @media only screen and (max-width:1200px) {
+            & {
+                width: 87.4%;
+                margin-left: 3rem;
+            }
+        }
         &--box {
             text-align: center;
             overflow: hidden;
