--- a/sass/components/postsection.scss
+++ b/sass/components/postsection.scss
@@ -19,6 +19,25 @@
         grid-template-columns: 100%;
         margin-left: 13rem;
         grid-template-rows: 10% 78% 12%;
+        @media only screen and (max-width: 1200px) {
+            & {
+                overflow: hidden;
+                width: 75%;
+                height: 63.5rem;
+                background-color: #242526;
+                margin-left: 6rem;
+                border-radius: 10px;
+                -webkit-border-radius: 10px;
+                -moz-border-radius: 10px;
+                -ms-border-radius: 10px;
+                -o-border-radius: 10px;
+                margin-top: 2rem;
+                display: grid;
+                grid-template-columns: 100%;
+                margin-left: 9rem;
+                grid-template-rows: 10% 78% 12%;
+            }
+        }
         &--header {
             width: 100%;
             height: 100%;
@@ -125,6 +144,16 @@
                 @media only screen and (max-width:1220px) {
                     & {
                         margin-left: 20rem;
+                    }
+                }
+                @media only screen and (max-width:1190px) {
+                    & {
+                        margin-left: 25rem;
+                    }
+                }
+                @media only screen and (max-width:1150px) {
+                    & {
+                        margin-left: 22rem;
                     }
                 }
             }
