--- a/sass/layout/activebar.scss
+++ b/sass/layout/activebar.scss
@@ -5,6 +5,11 @@
     grid-column: 3 / 4;
     overflow: scroll;
     overflow-x: hidden;
+    @media only screen and (max-width: 1100px) {
+        & {
+            visibility: hidden;
+        }
+    }
     & {
         scrollbar-width: auto;
         scrollbar-color: transparent transparent
