--- a/sass/layout/socialsection.scss
+++ b/sass/layout/socialsection.scss
@@ -5,6 +5,11 @@
     grid-column: 2 / 3;
     overflow: scroll;
     overflow-x: hidden;
+    // @media only screen and (max-width: 1150px) {
+    // & {
+    // grid-column: 2 / 4;
+    // }
+    // }
     & {
         scrollbar-width: auto;
         scrollbar-color: transparent transparent
