--- a/css/style.css
+++ b/css/style.css
@@ -1597,6 +1597,11 @@ body {
   border: none;
   cursor: pointer; }
 
+@media only screen and (max-width: 1500px) {
+  .respo--prefixer {
+    width: 90.4%;
+    margin-left: 1.5rem; } }
+
 @keyframes shimmer {
   0% {
     background-position: -550px 0; }
@@ -1997,10 +2002,6 @@ body {
       .main-con--story-con--grid {
         width: 87.4%;
         margin-left: 3rem; } }
-    @media only screen and (max-width: 1500px) {
-      .main-con--story-con--grid {
-        width: 90.4%;
-        margin-left: 1.5rem; } }
     .main-con--story-con--grid--box {
       text-align: center;
       overflow: hidden;
