--- a/sass/components/mind.scss
+++ b/sass/components/mind.scss
@@ -29,6 +29,29 @@
             margin-top: -2rem;
         }
     }
+    @media only screen and (max-width:1000px) {
+        & {
+            width: 85%;
+            height: 21%;
+            height: 12rem;
+            background-color: #242526;
+            position: relative;
+            margin-left: 4rem;
+            border-radius: 8px;
+            -webkit-border-radius: 8px;
+            margin-left: 5rem;
+            -moz-border-radius: 8px;
+            -ms-border-radius: 8px;
+            -o-border-radius: 8px;
+            margin-top: -2rem;
+        }
+    }
+    @media only screen and (max-width:930px) {
+        & {
+            width: 90%;
+            margin-left: 2.5rem;
+        }
+    }
     &--grid {
         width: 100%;
         height: 100%;
