--- a/sass/components/postsection.scss
+++ b/sass/components/postsection.scss
@@ -38,6 +38,18 @@
                 grid-template-rows: 10% 78% 12%;
             }
         }
+        @media only screen and (max-width:1000px) {
+            & {
+                margin-left: 5rem;
+                width: 85%;
+            }
+        }
+        @media only screen and (max-width:930px) {
+            & {
+                width: 90%;
+                margin-left: 3rem;
+            }
+        }
         &--header {
             width: 100%;
             height: 100%;
@@ -154,6 +166,11 @@
                 @media only screen and (max-width:1150px) {
                     & {
                         margin-left: 22rem;
+                    }
+                }
+                @media only screen and (max-width:1100px) {
+                    & {
+                        margin-left: 27rem;
                     }
                 }
             }
