--- a/sass/layout/sidebar.scss
+++ b/sass/layout/sidebar.scss
@@ -5,6 +5,11 @@
     grid-column: 1 / 2;
     overflow: scroll;
     overflow-x: hidden;
+    @media only screen and (max-width: 1100px) {
+        & {
+            width: 125%;
+        }
+    }
     & {
         scrollbar-width: auto;
         scrollbar-color: transparent transparent
