--- a/sass/layout/socialsection.scss
+++ b/sass/layout/socialsection.scss
@@ -5,11 +5,18 @@
     grid-column: 2 / 3;
     overflow: scroll;
     overflow-x: hidden;
-    // @media only screen and (max-width: 1150px) {
-    // & {
-    // grid-column: 2 / 4;
-    // }
-    // }
+    @media only screen and (max-width: 1150px) {
+        & {
+            grid-column: 2 / 4;
+            width: 80%;
+            margin-left: 12rem;
+        }
+    }
+    @media only screen and (max-width:1000px) {
+        & {
+            margin-left: 10rem;
+        }
+    }
     & {
         scrollbar-width: auto;
         scrollbar-color: transparent transparent
