--- a/sass/layout/socialsection.scss
+++ b/sass/layout/socialsection.scss
@@ -17,6 +17,11 @@
             margin-left: 10rem;
         }
     }
+    @media only screen and (max-width:880px) {
+        & {
+            margin-left: 8.5rem;
+        }
+    }
     & {
         scrollbar-width: auto;
         scrollbar-color: transparent transparent
