--- a/sass/components/postsection.scss
+++ b/sass/components/postsection.scss
@@ -50,6 +50,12 @@
                 margin-left: 3rem;
             }
         }
+        @media only screen and (max-width:840px) {
+            &{
+                width: 95%;
+    margin-left: 1.3rem;
+            }
+        }
         &--header {
             width: 100%;
             height: 100%;
