--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -38,6 +38,19 @@
                 width: 109%;
             }
         }
+        @media only screen and (max-width:840px) {
+            &{
+                width: 115%;
+           margin-left: 1rem;
+
+            }
+        }
+        @media only screen and (max-width:790px) {
+            &{
+        grid-template-columns: repeat(5, 23%);
+                margin-left: 2rem;
+            }
+        }
         &--box {
             text-align: center;
             overflow: hidden;
@@ -49,6 +62,7 @@
             -moz-border-radius: 1rem;
             -ms-border-radius: 1rem;
             -o-border-radius: 1rem;
+         
             &--img {
                 width: 100%;
                 height: 75%;
