--- a/sass/extra/extra.scss
+++ b/sass/extra/extra.scss
@@ -135,3 +135,11 @@
         }
     }
 }
+.hide-me-res--sm{
+    @media only screen and (max-width:840px) {
+        &{
+            visibility: hidden;
+            display: none;
+        }
+    }
+}
