--- a/sass/extra/extra.scss
+++ b/sass/extra/extra.scss
@@ -143,3 +143,12 @@
         }
     }
 }
+
+.res-hide-me-vsm{
+    @media only screen and (max-width:790px) {
+        &{
+            visibility: hidden;
+            display: none;
+        }
+    }
+}
